no block post type

--- a/src/sass/public.scss
+++ b/src/sass/public.scss
@@ -13,4 +13,4 @@ version 2.0 (http://www.gnu.org/licenses/gpl-2.0.html)
 @import 'root.scss';
 @import 'header.scss';
 @import 'blocks.scss';
-@import 'page.scss';
+@import 'overlay.scss';
