--- a/src/sass/blocks.scss
+++ b/src/sass/blocks.scss
@@ -1,36 +1,187 @@
 .block {
 	width: 100%;
 	transition: none;
-	@include md {
-		&.small, &.medium, &.large {
+	position: relative;
+	float: left;
+	@include fadeIn;
+	@include sm {
+		padding-bottom: 70%;
+		&.sm-width, &.md-width, &.lg-width {
 			width: 50%;
 		}
 	}
+	@include md {
+		padding-bottom: 50%;
+	}
 	@include lg {
-		&.small {
-			width: 20%;
+		padding-bottom: 30%;
+		&.sm-width {
+			width: 25%;
 		}
-		&.medium {
-			width: 40%;
+		&.md-width {
+			width: 50%;
 		}
-		&.large {
-			width: 80%;
+		&.lg-width {
+			width: 50%;
+		}
+		&.sm-height {
+			padding-bottom: 25%;
+		}
+		&.md-height {
+			padding-bottom: 30%;
 		}
 	}
+	@include xl {
+		&.sm-width {
+			width: 20%;
+		}
+		&.md-width {
+			width: 40%;
+		}
+		&.lg-width {
+			width: 80%;
+		}
+		&.sm-height {
+			padding-bottom: 20%;
+		}
+	}
+	// &.md-height {
+	// 	padding-bottom: 30%;	
+	// }
+	// &.lg-height {
+	// 	padding-bottom: 40%;
+	// }
 	&.hide {
 		display: none;
+	}
+	&.grid-sizer {
+		padding-bottom: 0 !important;
+	}
+	p {
+		margin: 0;
 	}
 	p:not(:last-of-type) {
 		margin: 0 0 1rem 0;
 	}
+
+	.category {
+		font-family: $mono;
+		font-size: 15px;
+	}
+
+	.image-left, .image-right, {
+		height: 100%;
+		background-size: 40% auto;
+		background-repeat: no-repeat;
+		background-position: right center;
+		.text {
+			width: 60%;
+		}
+	}
+	.image-background {
+		height: 100%;
+		background-size: 80%;
+		background-repeat: no-repeat;
+		background-position: right bottom;
+	}
+
+	.image {
+		width: 79%;
+		img {
+			width: 100%;
+	    display: table;
+		}
+	}
+
+	&.feature, &.sidebar {
+		.read-link {
+			margin-top: .5rem;
+			font-family: $sans-serif;
+			font-size: 20px;
+			text-decoration: underline;
+		}
+	}
+	&.feature {
+		.title {
+			font-size: 40px;
+			line-height: 50px;
+			font-family: $serif;
+			font-weight: bold;
+		}
+	}
+	&.sidebar {
+		.title {
+			font-size: 24px;
+			line-height: 30px;
+			font-family: $sans-serif;
+			font-weight: bold;
+		}
+	}
+	&.timeline {
+		color: $lightest;
+		.block-inner {
+			background: $darkest;
+		}
+		.date {
+			margin-top: 1rem;
+			font-family: $serif;
+			font-size: 24px;
+			font-weight: bold;
+		}
+		.title {
+			margin-top: .5rem;
+			font-family: $sans-serif;
+			font-size: 16px;
+			line-height: 20px;
+			font-weight: bold;
+		}
+	}
+	&.quotes {
+		.body {
+			font-size: 28px;
+			line-height: 40px;
+			font-family: $serif;
+		}
+		.quote-by {
+			margin-top: .5rem;
+			font-size: 16px;
+			font-family: $sans-serif;
+			font-weight: bold;
+		}
+	}
+	&.staff-stats, &.fdo-stats, {
+		.block-inner {
+			background: $yellow;
+		}
+		.title {
+			font-size: 78px;
+			line-height: 85px;
+			font-family: $serif;
+		}
+		.body {
+			font-size: 16px;
+			line-height: 20px;
+			font-family: $sans-serif;
+			font-weight: bold;
+		}
+	}
 }
 .block-inner {
-	width: calc(100% - 1rem);
+	width: calc(100% - 2rem);
+	height: calc(100% - 2rem);
 	display: table;
-	margin: .5rem;
+	margin: 1rem;
 	padding: 1rem;
 	border: 1px solid transparent;
 	-webkit-hyphenate-character: '';
+	@include sm {
+		min-height: unset;
+		margin: 0;
+		display: block;
+		position: absolute;
+		left: 1rem;
+		top: 1rem;
+	}
 	.white & {
 		background: $lightest;
 	}
@@ -66,11 +217,6 @@
 		font-family: $sans-serif;
 		font-weight: bold;
 	}
-}
-.block-category {
-	@include xsText;
-	margin-bottom: 1rem;
-	font-family: $mono;
 }
 .block-title {
 	font-weight: bold;
@@ -111,8 +257,6 @@
 	@include xlText;
 }
 
-
-
 .wp-block-image {
 	margin: 0;
 	* {
@@ -133,7 +277,7 @@
 	}
 	.back-button {
 		position: absolute;
-		left: .5rem;
-		top: .7rem;
+		left: 0rem;
+		top: .15rem;
 	}
 }
