--- a/src/sass/header.scss
+++ b/src/sass/header.scss
@@ -1,59 +1,87 @@
-header {
+header#header {
 	width: 100%;
-	height: 10rem;
 	background: white;
-	margin: 0 0 6rem 0;
-	// display: flex;
+	margin-bottom: 2rem;
+	display: table;
+	@include md {
+		height: 10rem;
+		margin-bottom: 4rem;
+	}
 }
 #site-header {
-	width: 40%;
-	padding: .5rem;
-	float: left;
+	width: 100%;
+	padding: 1rem;
+	margin-bottom: 2rem;
+	@include md {
+		width: 40%;
+		margin-bottom: 0;
+		float: left;
+	}
 }
 #site-title {
 	margin-bottom: 1rem;
-	max-width: 14rem;
+	@include xlText;
+	// @include xs {
+	// 	@include lgText;
+	// 	max-width: 12rem;
+	// }
 }
 #site-tagline {
+	width: 100%;
 	@include smText;
-	max-width: 14rem;
 	.candid-logo {
 		font-family: $candid;
 	}
+	// @include lg {
+		// width: 50%;
+	// }
 }
 #block-filters {
-	width: 60%;
-	padding: .5rem;
+	width: 100%;
+	padding: 1rem 0;
+	display: table;
 	font-family: $sans-serif;
 	user-select: none;
-	float: left;
+	float: right;
+	// opacity: 0;
+	// @include fadeIn(1000ms, 2000ms);
+
+	@include md {
+		width: 50%;
+	}
+	@include lg {
+		width: 50%;
+	}
+	@include xl {
+		width: 40%;
+	}
 	form {
+		width: 100%;
 		float: right;
 		display: flex;
 		flex-wrap: wrap;
-		// justify-content: flex-end;
 	}
 	.block-filter {
-		width: 40%;
-		margin: 0 .5rem .5rem 0;
+		width: 50%;
+		padding: 0 1rem .5rem 1rem;
 	}
 	label {
-		
+		// float: right;
 	}
 	label:hover {
 		cursor: pointer;
 	}
 	label::before {
 		content: '';
-		width: 1em;
-		height: 1em;
+		width: 1rem;
+		height: 1rem;
 		display: inline-block;
 		margin: 0 .5rem -.15rem 0;
 		border: 1px solid $darkest;
 	}
 	input[type="checkbox"]:checked + label::before {
-		background: url(./../../images/close.svg);
-    background-size: calc(100% - 4px);
+		background: url(./../../images/check.svg);
+    background-size: 100%;
     background-repeat: no-repeat;
     background-position: center;
 	}
