--- a/src/sass/root.scss
+++ b/src/sass/root.scss
@@ -4,23 +4,18 @@ html, body {
 	margin: 0;
 	padding: 0;
 	font-family: $serif;
-	font-size: 18px;
 	text-rendering: optimizeLegibility;
-	// @include sm {
-	// 	font-size: 3vw;
-	// }
-	// @include md {
-	// 	font-size: 2vw;
-	// }
-	// @include xl {
-	// 	font-size: 1.5vw;
-	// }
 }
 html[lang="en-US"] {
 	margin-top: 0 !important;
 	padding-top: 32px;
 }
-
+html {
+	font-size: 18px;
+}
+body {
+	@include smText;
+}
 * {
 	box-sizing: border-box;
 }
@@ -53,28 +48,35 @@ a, a:hover, a:active, a:link, a:visited {
 #page {
 	// max-width: 1800px;
 	margin: auto;
-	padding: 1rem;
+	padding: 0;
+	@include sm {
+		padding: 1rem 2rem;
+	}
 }
 
 main {
+	width: 100%;
 	margin: 1rem 0;
 }
 
-main#main {
+main#main-blocks {
+	// opacity: 0;
+	// @include fadeIn(1000ms, 2000ms);
 	body.article-open & {
 		display: none;
 	}
 }
 
 .back-button {
-	width: 1em;
-	height: 1em;
+	width: 1rem;
+	height: 1rem;
 	display: inline-block;
 	border: 1px solid $darkest;
-	background: url(./../../images/close.svg);
-	background-size: calc(100% - 4px);
+	background: url(./../../images/back.svg);
+	background-size: 100%;
 	background-repeat: no-repeat;
 	background-position: center;
+	@include fadeIn;
 	&:hover {
 		cursor: pointer;
 	}
