--- a/src/sass/vars.scss
+++ b/src/sass/vars.scss
@@ -3,7 +3,8 @@ $light: #f6f6f7;
 $medium: #d0d4d9;
 $darkest: #000;
 
-$yellow: #febe10;
+$gold: #febe10;
+$orange: #faa21b;
 
 //////////////////////////////////////////////////
 //////////////////////////////////////////////////
@@ -90,6 +91,9 @@ $serif: 'Algebra', sans-serif;
 $sans-serif: 'Akkurat', sans-serif;
 $mono: 'IBM Plex Mono', monospace;
 $candid: 'Candid';
+
+$serif: "Algebra Web","Georgia", serif;
+$sans-serif: "LL Akkurat Regular Web","Open Sans","Calibri","Arial",sans-serif;
 
 @font-face {
 	font-family: 'Algebra';
