--- a/src/sass/header.scss
+++ b/src/sass/header.scss
@@ -79,8 +79,8 @@ header#header {
 	}
 	label::before {
 		content: '';
-		width: 1rem;
-		height: 1rem;
+		width: $button;
+		height: $button;
 		display: inline-block;
 		margin: 0 .5rem -.15rem 0;
 		border: 1px solid $darkest;
