--- a/src/sass/vars.scss
+++ b/src/sass/vars.scss
@@ -1,3 +1,8 @@
+$button: 1.1rem;
+
+//////////////////////////////////////////////////
+//////////////////////////////////////////////////
+
 $lightest: #fff;
 $light: #f6f6f7;
 $medium: #d0d4d9;
@@ -31,7 +36,7 @@ $orange: #faa21b;
 
 @mixin xlText {
 	font-size: 2.78rem;
-	line-height: 1.2em;
+	line-height: 1em;
 }
 
 @mixin xxlText {
